# vpcf-editor

./: .gitignore  index.html  package-lock.json  package.json  readme.md  version.json  vite.config.ts
src/: App.tsx  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: color_utils.rs  config.rs  file_ops.rs  lib.rs  main.rs
src/components/: ColorEditorTab.tsx  ColorRow.tsx  ContextMenu.tsx  HistoryPanel.tsx  Primitives.tsx  RawTextTab.tsx  SavedColorsPalette.tsx  SettingsDialog.tsx  SharedColorsTab.tsx  Sidebar.tsx  ToastContainer.tsx
src/store/: appStore.ts
src/styles/: global.css
src/utils/: colorUtils.ts  tauriCommands.ts
