[package]
name = "vpcf-editor"
version = "0.9.0"
description = "VPCF Color Editor"
authors = ["yousv"]
edition = "2021"

[lib]
name = "vpcf_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
regex               = "1"
once_cell           = "1"
walkdir             = "2"
dirs                = "5"

[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = "s"
strip         = true
